<resources>
    <string name="app_name">PresentData</string>
    <string name="title_order">Order</string>
    <string name="title_stock">Stock</string>
    <string name="title_about">About</string>
    <string name="set_head_label">Choose your stock below</string>
    <string name="firm_1_btn_label">IRMN</string>
    <string name="firm_2_btn_label">BTMN</string>
    <string name="firm_3_btn_label">ZMBI</string>
    <string name="stock_info">Open: %.2f\n\nClose: %.2f\n\nChange: (%.2f)</string>
    <string name="json_model">Use Moshi</string>
    <string name="set_product_title">Our products are</string>
</resources>