<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_order">

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.app4free.presentdata.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.app4free.presentdata.ui.stock.StockFragment"
        android:label="@string/title_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.app4free.presentdata.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>